--- a/src/component/UI/Modal/Modal.css
+++ b/src/component/UI/Modal/Modal.css
@@ -11,7 +11,9 @@
     box-sizing: border-box;
     transition: all 0.3s ease-out;
 }
-
+.hidden {
+    visibility: hidden;
+}
 @media (min-width: 600px) {
     .Modal {
         width: 500px;
