--- a/src/component/Item/Item.css
+++ b/src/component/Item/Item.css
@@ -25,16 +25,16 @@
 .parts-desc-box {
     display: flex;
     padding: 10px;
-    width: 70%;
+    width: 80%;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
 }
 .parts-rate-box {
     display: flex;
-    width: 25%;
+    width: 15%;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: center;
     color: red;
     padding: 10px 0;
 }
