--- a/src/component/Checkout/Checkout.css
+++ b/src/component/Checkout/Checkout.css
@@ -28,3 +28,8 @@
     text-align: center;
     margin-top: 10px;
 }
+.net-amount-box {
+    text-align: end;
+    padding: 10px 3%;
+    font-weight: bold;
+}
