--- a/src/component/Item/Item.css
+++ b/src/component/Item/Item.css
@@ -1,5 +1,5 @@
 .items-box {
-    width: 100vw;
+    width: 99vw;
     overflow-x: hidden;
 }
 .searchbar-box {
@@ -28,6 +28,7 @@
     width: 80%;
     flex-direction: column;
     align-items: flex-start;
+    font-weight: bold;
     justify-content: center;
 }
 .parts-rate-box {
@@ -35,9 +36,13 @@
     width: 15%;
     align-items: center;
     justify-content: center;
-    color: red;
+    font-weight: bold;
     padding: 10px 0;
 }
-.parts-name {
-    font-weight: bold;
+.parts-desc {
+    color: darkviolet;
+}
+.parts-location {
+    color: blue;
+    font-weight: 12px;
 }
