Changes to add location to pdf

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  width: 100vw;
+  /* width: 99vw; */
   height: 100vh;
   /* background: linear-gradient(90deg, rgba(63,94,251,1) 0%, rgba(130,36,55,1) 100%);  */
 }
