--- a/src/component/Checkout/Checkout.css
+++ b/src/component/Checkout/Checkout.css
@@ -6,8 +6,13 @@
     border-bottom: 1px solid #ccc;
 }
 .checkout-item-col {
+    display: flex;
+    flex-direction: column;
     width: 40%;
     text-align: center;
+}
+.checkout-item-location {
+    font-weight: bold;
 }
 .checkout-item-rate-col {
     width: 20%;
