--- a/src/component/Header/Header.css
+++ b/src/component/Header/Header.css
@@ -1,13 +1,9 @@
 .app-header {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    height: 3rem;
-    padding: 0.5rem;
-    background:#7336f7;
-    color: white;
-    font-size: 1.2rem;
-    font-weight: bold;
-    font-family: sans-serif;
+    background: url('../../assets/logo.bmp');
+    height: 13vh;
+    border: 2px solid #ccc;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+
 }
